--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,5 @@
 [core]
-    remote = my_remote
+    remote = storage 
 ['remote "storage"']
     url = gdrive://14I1EgcxsDXKIt1TxiOteAmFaXeSsfyC3
 ['remote "my_remote"']
