Update fluentd config, add elasticsearch config

--- a/td-agent.conf
+++ b/td-agent.conf
@@ -63,6 +63,7 @@
     expression /^(?<logtime>[^\]]*) DEBUG .* Deploy version\: (?<version>[^ ]*), input vector\: \[(?<age>[^ ]*), (?<sex>[^ ]*), (?<bmi>[^ ]*), (?<bp>[^ ]*), (?<s1>[^ ]*), (?<s2>[^ ]*), (?<s3>[^ ]*), (?<s4>[^ ]*), (?<s5>[^ ]*), (?<s6>[^ ]*)\], prediction\: (?<prediction>[^ ]*)$/ 
     time_key logtime
     time_format %Y-%m-%d %H:%M:%S,%N
+    types age:integer,bmi:float,bp:float,s1:integer,s2:float,s3:integer,s4:float,s5:float,s6:integer
   </parse>
 </source>
 
@@ -75,6 +76,7 @@
   host localhost
   port 9200
   logstash_format true
+  logstash_prefix logstash_train_log
 </match>
 
 
@@ -83,6 +85,7 @@
   host localhost
   port 9200
   logstash_format true
+  logstash_prefix logstash_app_log
 </match>
 
 #
